# DeepFactors

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.ubuntu  LICENSE  README.md  build_docker.sh  tftest.cpp
cmake/: FindGlog.cmake  FindJsoncpp.cmake  FindTensorFlow.cmake  Findgflags.cmake
data/: sequences.json
data/calib/: flea.yml  grasshopper.yml
data/flags/: alg_odom.flags  alg_refine.flags  common.flags  dataset_odom.flags  live_odom.flags  live_refine.flags
scripts/: download_network.bash  download_scannet_python3.patch  run_scannet.bash
scripts/docker/: build_docker.sh  run_docker.sh
scripts/sens_reader/: LICENSE  README.md  SensorData.py
sources/: CMakeLists.txt
sources/common/: CMakeLists.txt  display_utils.cpp  display_utils.h  image_sequences.cpp  image_sequences.h  indexed_map.h  interp.cpp  interp.h  intrinsics.h  logutils.cpp  logutils.h  timing.cpp  timing.h  tum_io.h
sources/common/algorithm/: camera_pyramid.h  dense_sfm.h  lucas_kanade_se3.h  m_estimators.h  nearest_psd.h  pinhole_camera.h  pinhole_camera_impl.h  warping.h
sources/core/: CMakeLists.txt  deepfactors.cpp  deepfactors.h  deepfactors_options.cpp  deepfactors_options.h
sources/core/features/: feature_detection.h  matching.cpp  matching.h
sources/core/gtsam/: depth_prior_factor.cpp  depth_prior_factor.h  factor_graph.h  gtsam_traits.h  gtsam_utils.h  photometric_factor.cpp  photometric_factor.h  reprojection_factor.cpp  reprojection_factor.h  sparse_geometric_factor.cpp  sparse_geometric_factor.h  uniform_sampler.cpp  uniform_sampler.h
sources/core/mapping/: df_work.cpp  df_work.h  frame.h  keyframe.h  keyframe_map.h  mapper.cpp  mapper.h  work.cpp  work.h  work_manager.cpp  work_manager.h
sources/core/network/: decoder_network.cpp  decoder_network.h  tfwrap.h
sources/core/system/: camera_tracker.cpp  camera_tracker.h  fbrisk.cpp  fbrisk.h  loop_detector.cpp  loop_detector.h
sources/cuda/: CMakeLists.txt  cu_depthaligner.cpp  cu_depthaligner.h  cu_image_proc.cpp  cu_image_proc.h  cu_se3aligner.cpp  cu_se3aligner.h  cu_sfmaligner.cpp  cu_sfmaligner.h  cuda_context.cpp  cuda_context.h  device_info.h  kernel_utils.h  launch_utils.h  reduction_items.h  synced_pyramid.h
sources/demo/: CMakeLists.txt  live_demo.cpp  live_demo.h  main.cpp
sources/drivers/: CMakeLists.txt  camera_interface.h  camera_interface_factory.cpp  camera_interface_factory.h
sources/drivers/camera/: live_interface.h  openni_interface.cpp  openni_interface.h  pointgrey_interface.cpp  pointgrey_interface.h
sources/drivers/dataset/: dataset_interface.h  file_interface.cpp  file_interface.h  icl_interface.cpp  icl_interface.h  scannet_interface.cpp  scannet_interface.h  tum_interface.cpp  tum_interface.h
sources/gui/: CMakeLists.txt  keyframe_renderer.cpp  keyframe_renderer.h  visualizer.cpp  visualizer.h
sources/gui/shaders/: drawkf.geom  empty.vert  phong.frag
sources/tools/: CMakeLists.txt  decode_image.cpp  kernel_benchmark.cpp  result_viewer.cpp  test_matching.cpp  voc_builder.cpp  voc_test.cpp
tests/: CMakeLists.txt  main.cpp  random_machine.h  testing_utils.h  ut_cuda_utils.cpp  ut_decoder.cpp  ut_nearestpsd.cpp  ut_pinhole_camera.cpp  ut_sampling.cpp  ut_se3aligner.cpp  ut_sfmaligner.cpp  ut_warping.cpp
